--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         
         <!-- Span -->
-        <span id="nome">nome</span>
+        <span id="password">password</span>
         
         <!-- Script collegamento con JS -->
         <script type="text/javascript" src="js/script.js">
